test/fixtures/source-map/output/source_map_throw_first_tick.snapshot
reachable
*typescript-throw.ts:18
    throw Error('an exception');
    ^


Error: an exception
    at branch (*typescript-throw.ts:18:11)
    at Object.<anonymous> (*typescript-throw.ts:24:1)

Node.js *
